I add bold to my name

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             <hr>
                         </div>
                         <div>
-                            <p class="pb-2">My name is Hussain Ali, from Iraq, Baghdad
+                            <p class="pb-2">My name is <b>Hussain Ali</b>, from Iraq, Baghdad
                                 ,I'm a second year student at the University
                                 of Information Technology and Communcations,
                                  My department is Intelligent Medical Systems
